--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-900 text-gray-100; 
+  @apply bg-white-600 text-gray-900; 
   -webkit-font-smoothing: antialiased;
 }
